# POLUX

./: CMakeLists.txt  Doxyfile  README.md  adjective.cpp  adjective.h  adverb.cpp  adverb.h  dictionnary.cpp  dictionnary.h  main.cpp  nominalgroup.cpp  nominalgroup.h  noun.cpp  noun.h  object.cpp  object.h  polux.cpp  polux.h  polux.kdev4  propertie.cpp  propertie.h  sentence.cpp  sentence.h  sentencepattern.cpp  sentencepattern.h  thing.cpp  thing.h  thingsindex.cpp  thingsindex.h  verb.cpp  verb.h  verbalgroup.cpp  verbalgroup.h  word.cpp  word.h  wordgroup.cpp  wordgroup.h
